--- a/Retrieving_Autocomplete_Predictions.html
+++ b/Retrieving_Autocomplete_Predictions.html
@@ -6,7 +6,9 @@
 </head>
 <body>
   <div id="right-panel">
-    <p>Consultar sugerencias de comida</p>
+  <h3 style="margin-left: 50px">lo que hace este caso es hacer predicciones de los lugares que se encuentren dependiendo de platillo, lugar o comida que le ingreses y un lugar</p>
+  <h3>por ejemplo hamburgesas mexico df</h3>
+  <br>
     <input type="text" id="search_food" name="search_food"></input>
     <button onclick="initService()">Buscar </button>
 
