--- a/Geolocation_and_Place_search_pagination.html
+++ b/Geolocation_and_Place_search_pagination.html
@@ -11,7 +11,10 @@
         padding: 0;
       }
       #map {
-        height: 100%;
+        height: 70%;
+        width: 70%;
+        margin-top: 5%;
+        margin-left: 10%;
       }
     </style>
     <script>
@@ -154,6 +157,7 @@ function handleLocationError(browserHasGeolocation, infoWindow, pos) {
     </style>
   </head>
   <body>
+    <h2 style="margin-left: 50px">De igual manera primero se activa la geolocalización y despues dependiendo de la  ubicación regresara restaurantes o lugares relacionados con comida en forma de lista</h2>
     <div id="map"></div>
     <div id="right-panel">
       <h2>Resultados</h2>
