--- a/PlaceID_finder.html
+++ b/PlaceID_finder.html
@@ -6,12 +6,16 @@
     <meta charset="utf-8">
     <style>
       html, body {
-        height: 100%;
-        margin: 0;
+        height: 70%;
+        
+          margin: 0;
         padding: 0;
       }
       #map {
-        height: 100%;
+        height: 70%;
+        width: 70%;
+        margin-top: 5%;
+        margin-left:5%;
       }
       .controls {
         background-color: #fff;
@@ -38,6 +42,7 @@
     </style>
   </head>
   <body>
+    <h2>en este buscas un lugar determinado y en la opcion más información te mandara a la informacion detallada del sitio,por ejemplo, reseñas de usuarios, horarios etc</h2>
     <input id="pac-input" class="controls" type="text"
         placeholder="Ingresa el nombre de un establecimento">
     <div id="map"></div>
